@@ -2,15 +2,17 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>io.quarkus.benchmark</groupId>
-  <artifactId>code-with-quarkus</artifactId>
+  <groupId>io.quarkus.loom</groupId>
+  <artifactId>pirate-fortunes</artifactId>
   <version>1.0.0-SNAPSHOT</version>
+
   <properties>
     <quarkus.version>999-SNAPSHOT</quarkus.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
-    <vertx.version>4.2.1</vertx.version>
+    <maven.compiler.source>19</maven.compiler.source>
+    <maven.compiler.target>19</maven.compiler.target>
+    <maven.compiler>true</maven.compiler>
+    <maven.compiler.forceJavacCompilerUse>true</maven.compiler.forceJavacCompilerUse>
   </properties>
 
   <dependencyManagement>
@@ -22,39 +24,13 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-      <dependency>
-        <groupId>io.quarkus.benchmark</groupId>
-        <artifactId>base</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>io.vertx</groupId>
-        <artifactId>vertx-pg-client</artifactId>
-        <version>${vertx.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>io.vertx</groupId>
-        <artifactId>vertx-sql-client</artifactId>
-        <version>${vertx.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>io.vertx</groupId>
-        <artifactId>vertx-web</artifactId>
-        <version>${vertx.version}</version>
-      </dependency>
     </dependencies>
   </dependencyManagement>
 
   <dependencies>
     <dependency>
-      <groupId>com.zaxxer</groupId>
-      <artifactId>HikariCP</artifactId>
-      <version>5.0.1</version>
-    </dependency>
-    <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-netty-loom-adaptor</artifactId>
-      <version>999-SNAPSHOT</version>
+      <artifactId>quarkus-agroal</artifactId>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
@@ -133,6 +109,15 @@
             </goals>
           </execution>
         </executions>
+        <configuration>
+          <source>19</source>
+          <target>19</target>
+          <compilerArgs>
+            <arg>--enable-preview</arg>
+            <arg>-Dnet.bytebuddy.experimental</arg>
+          </compilerArgs>
+          <jvmArgs>--enable-preview --add-opens java.base/java.lang=ALL-UNNAMED</jvmArgs>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>io.quarkus</groupId>
